Removed the javax.xml.bind.DatatypeConverter as part of enabling Java 9
Since the javax.xml.bind package is removed in Java 9, it would help if
this package was removed from the code.
This was replaced with Apache Commons and not java.util.Base64 because
the encode function there requires compilation with java 8.